--- a/css/responsive.css
+++ b/css/responsive.css
@@ -26,3 +26,27 @@
 }
 
 /*Desktop section*/ 
+@media screen and (min-width:992px){
+    main{margin-left:100px;
+    margin-right:100px;}
+
+    footer{display: flex;
+    justify-content: space-between;
+align-items: center;
+margin-top:100px;}
+
+.recipe-container{flex-direction: row;
+justify-content:flex-start;
+height:700px;}
+
+.youtube-container{width:70%;
+height:auto;}
+
+ul{display:flex;
+flex-direction:column;
+height:70%}
+
+
+
+
+}
