--- a/css/style.css
+++ b/css/style.css
@@ -22,12 +22,15 @@ padding-top:5px;
 justify-content: space-between;}
 
 .recipe-container{background-color: white;
-height:250px;
-padding: 15px 15px;}
+height:550px;
+padding: 15px 15px;
+display:flex;
+flex-direction:column;}
 
 .recipe-info{height:90px;
 background-color: rgb(170, 170, 170);
 border-radius: 10px;
+padding-top:20px;
 }
 
 ul{margin-top:15px;}
@@ -83,6 +86,7 @@ border-radius:30px;}
 
 iframe{display:block;
 width:100%;
+height:100%;
 margin-top:20px;}
 
 .kcal{background-color: rgb(115, 115, 203);
